Add LLM guide loading and configuration

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@
 OPENAI_API_KEY=your-openai-key
 OPENAI_MODEL=gpt-4-turbo
 REPO_URL=https://github.com/your/repository
+# Optional path to the LLM guide. Defaults to LLM_Guide.md in the repository root
+LLM_GUIDE_PATH=/path/to/LLM_Guide.md
