--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,8 @@
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
+    "chartjs-plugin-zoom": "^2.2.0",
+    "jspdf": "^2.5.1",
     "@uiw/react-codemirror": "^4.24.1",
     "@codemirror/lang-sql": "^6.9.0"
   },
