--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,11 +13,14 @@
     "@heroicons/react": "^2.2.0",
     "@material-tailwind/react": "^2.1.10",
     "chart.js": "^4.4.0",
+    "@tanstack/react-table": "^8.8.2",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "chartjs-plugin-zoom": "^2.2.0",
     "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.28",
+    "xlsx": "^0.18.5",
     "@uiw/react-codemirror": "^4.24.1",
     "@codemirror/lang-sql": "^6.9.0"
   },
